regression/fail/overloading-context.5.sml
functor F () =
   struct
      val x = 0w0
      structure S = struct end
      val _ = x: Word8.word
   end

